<resources>
    <string name="app_name">Github User App</string>

    <!--  Other string resources -->
    <string name="users_name">Name</string>
    <string name="users_company">Company</string>
    <string name="detail_name">Name</string>
    <string name="detail_username">Username</string>
    <string name="detail_followers">Followers</string>
    <string name="detail_following">Following</string>
    <string name="detail_company">Company</string>
    <string name="detail_location">Location</string>
    <string name="detail_repository">Repository</string>
    <string name="detail_photo">Photo</string>
    <string name="search">Find User</string>
    <string name="search_hint">Search User</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragment_username">Username</string>
    <string name="fragment_name">Name</string>
    <string name="fragment_company">Company</string>
    <string name="fragment_location">Location</string>
    <string name="tab_text_1">Followers</string>
    <string name="tab_text_2">Following</string>
    <string name="favorite">Favorite</string>
    <string name="theme_settings">Theme Settings</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="notification_settings">Notification Settings</string>
    <string name="reminder_setting">Reminder Setting</string>
    <string name="daily_reminder">Daily Reminder</string>
    <string name="title_notification_setting">Notification Settings</string>
    <string name="daily_message">Find new favorite user on Github</string>
    <string name="main_title">Github User App</string>
    <string name="favorite_title">Favorite User</string>
    <string name="theme_title">Theme Settings</string>


</resources>