<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:menuCategory="container">
        <item
            android:id="@+id/search"
            android:icon="@drawable/ic_baseline_search_24"
            android:title="@string/search"
            app:actionViewClass="androidx.appcompat.widget.SearchView"
            app:showAsAction="collapseActionView|always" />

        <item android:id="@+id/favorite"
            android:title="@string/favorite" />

        <item android:id="@+id/change_theme"
            android:title="@string/theme_settings" />

        <item android:id="@+id/notification"
            android:title="@string/notification_settings"/>
    </group>
</menu>